--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "react-video-converter",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://youtube-onlinevideoconverter.com",
+  "homepage": "https://im-malikjaved.github.io/youtube-converter",
   "dependencies": {
     "axios": "^0.19.0",
     "file-saver": "^2.0.2",
